--- a/BrightID/e2e/config.json
+++ b/BrightID/e2e/config.json
@@ -1,6 +1,10 @@
 {
-    "setupFilesAfterEnv": ["./init.js"],
+    "setupFilesAfterEnv": [
+        "./init.js"
+    ],
     "testEnvironment": "node",
-    "reporters": ["detox/runners/jest/streamlineReporter"],
+    "reporters": [
+        "detox/runners/jest/streamlineReporter"
+    ],
     "verbose": true
 }
