--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -136,28 +136,10 @@
     "react-test-renderer": "16.13.1",
     "redux-mock-store": "^1.5.4",
     "resolve": "^1.20.0",
+    "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   },
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^8.9.0"
-  },
-  "jest": {
-    "preset": "react-native",
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
-    },
-    "globals": {
-      "window": {}
-    },
-    "setupFiles": [
-      "./jestSetupFile.js",
-      "./node_modules/react-native-gesture-handler/jestSetup.js"
-    ],
-    "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-async-storage/async-storage|react-native-gesture-handler|react-native-platform-touchable|react-native-vector-icons|react-native-spinkit|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
-    ],
-    "testPathIgnorePatterns": [
-      "./e2e/"
-    ]
   }
 }
