--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -49,6 +49,7 @@
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.8",
     "i18next": "19.8.7",
+    "immer": "^8.0.1",
     "lodash": "4.17.20",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
