--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -78,14 +78,14 @@
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "2.15.2",
-    "react-native-url-polyfill": "^1.2.0",
+    "react-native-url-polyfill": "1.2.0",
     "react-native-vector-icons": "7.1.0",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
-    "redux-mock-store": "^1.5.4",
+    "redux-mock-store": "1.5.4",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
-    "reselect": "^4.0.0",
+    "reselect": "4.0.0",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
@@ -135,10 +135,9 @@
     "metro-react-native-babel-preset": "^0.65.1",
     "mock-async-storage": "^2.2.0",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.5"
     "react-test-renderer": "17.0.1",
-    "redux-mock-store": "^1.5.4",
-    "resolve": "^1.20.0"
+    "resolve": "^1.20.0",
+    "typescript": "^4.1.5"
   },
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^8.9.0"
