--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -22,35 +22,34 @@
     "m1-install": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1 yarn install"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "3.8.0",
-    "@react-native-async-storage/async-storage": "1.13.4",
+    "@expo/react-native-action-sheet": "3.9.0",
+    "@react-native-async-storage/async-storage": "1.15.5",
     "@react-native-community/blur": "3.6.0",
     "@react-native-community/clipboard": "1.5.1",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "0.1.11",
     "@react-native-community/push-notification-ios": "1.8.0",
     "@react-native-community/slider": "3.0.3",
-    "@react-native-community/viewpager": "4.2.2",
-    "@react-native-picker/picker": "1.9.11",
-    "@react-navigation/drawer": "5.12.3",
-    "@react-navigation/native": "5.9.2",
-    "@react-navigation/stack": "5.14.2",
-    "@reduxjs/toolkit": "1.5.0",
-    "apisauce": "2.0.1",
+    "@react-native-picker/picker": "1.16.1",
+    "@react-navigation/drawer": "5.12.5",
+    "@react-navigation/native": "5.9.4",
+    "@react-navigation/stack": "5.14.5",
+    "@reduxjs/toolkit": "1.5.1",
+    "apisauce": "2.1.1",
     "appcenter": "3.1.2",
     "appcenter-analytics": "3.1.2",
     "appcenter-crashes": "3.1.2",
     "base64-js": "1.5.1",
-    "buffer": "5.6.0",
+    "buffer": "6.0.3",
     "crypto-js": "3.3.0",
-    "detox": "18.6.0",
+    "detox": "18.14.1",
     "ed2curve": "0.3.0",
     "emittery": "0.6.0",
-    "events": "3.2.0",
+    "events": "3.3.0",
     "fast-json-stable-stringify": "2.1.0",
-    "husky": "4.3.8",
+    "husky": "6.0.0",
     "i18next": "19.8.7",
     "immer": "8.0.1",
-    "lodash": "4.17.20",
+    "lodash": "4.17.21",
     "moment": "2.29.1",
     "promise.any": "^2.0.2",
     "prop-types": "15.7.2",
@@ -61,28 +60,29 @@
     "react-i18next": "11.8.6",
     "react-native": "0.63.4",
     "react-native-barcode-mask": "1.2.4",
-    "react-native-camera": "3.42.2",
+    "react-native-camera": "3.43.9",
     "react-native-code-push": "7.0.0",
     "react-native-dropdownalert": "4.3.0",
-    "react-native-gesture-handler": "1.10.1",
-    "react-native-image-crop-picker": "0.36.0",
-    "react-native-keyboard-aware-scroll-view": "0.9.3",
-    "react-native-keychain": "6.2.0",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-image-crop-picker": "0.36.2",
+    "react-native-keyboard-aware-scroll-view": "0.9.4",
+    "react-native-keychain": "7.0.0",
     "react-native-localize": "2.0.2",
     "react-native-modal-overlay": "1.3.1",
     "react-native-navigation-bar-color": "2.0.1",
-    "react-native-push-notification": "7.2.1",
-    "react-native-randombytes": "3.6.0",
+    "react-native-pager-view": "^5.1.10",
+    "react-native-push-notification": "7.3.1",
+    "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "1.13.2",
-    "react-native-safe-area-context": "3.1.9",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "2.17.1",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "12.1.0",
-    "react-native-tab-view": "2.15.2",
-    "react-native-url-polyfill": "1.2.0",
+    "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.0.1",
+    "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "7.1.0",
-    "react-redux": "7.2.2",
-    "redux": "4.0.5",
+    "react-redux": "7.2.4",
+    "redux": "4.1.0",
     "redux-mock-store": "1.5.4",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
@@ -90,7 +90,6 @@
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
-    "toggle-switch-react-native": "3.0.0",
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
     "xml2js": "0.4.23"
   },
@@ -100,8 +99,8 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
-    "@types/jest": "^26.0.20",
-    "@types/ramda": "^0.27.38",
+    "@types/jest": "^26.0.23",
+    "@types/ramda": "^0.27.40",
     "@types/react": "^17.0.2",
     "@types/react-native": "^0.63.49",
     "@types/react-native-vector-icons": "^6.4.6",
@@ -109,8 +108,8 @@
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux-persist": "^4.3.1",
     "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
@@ -118,27 +117,27 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.20.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^11.0.0",
     "metro-react-native-babel-preset": "^0.65.1",
     "mock-async-storage": "^2.2.0",
-    "prettier": "^2.2.1",
-    "react-test-renderer": "17.0.1",
+    "prettier": "^2.3.0",
+    "react-test-renderer": "17.0.2",
     "resolve": "^1.20.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.3.2"
   },
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^8.9.0"
