--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -26,7 +26,7 @@
     "@react-native-async-storage/async-storage": "1.15.5",
     "@react-native-community/blur": "3.6.0",
     "@react-native-community/clipboard": "1.5.1",
-    "@react-native-community/masked-view": "0.1.11",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "1.8.0",
     "@react-native-community/slider": "3.0.3",
     "@react-native-picker/picker": "1.16.1",
@@ -47,8 +47,8 @@
     "events": "3.3.0",
     "fast-json-stable-stringify": "2.1.0",
     "husky": "6.0.0",
-    "i18next": "19.8.7",
-    "immer": "8.0.1",
+    "i18next": "20.3.1",
+    "immer": "9.0.2",
     "lodash": "4.17.21",
     "moment": "2.29.1",
     "promise.any": "^2.0.2",
@@ -57,28 +57,28 @@
     "ramda": "0.27.1",
     "react": "16.13.1",
     "react-dom": "16.11.0",
-    "react-i18next": "11.8.6",
+    "react-i18next": "11.10.0",
     "react-native": "0.63.4",
     "react-native-barcode-mask": "1.2.4",
-    "react-native-camera": "3.43.9",
+    "react-native-camera": "3.44.1",
     "react-native-code-push": "7.0.0",
     "react-native-dropdownalert": "4.3.0",
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-crop-picker": "0.36.2",
     "react-native-keyboard-aware-scroll-view": "0.9.4",
     "react-native-keychain": "7.0.0",
-    "react-native-localize": "2.0.2",
+    "react-native-localize": "2.1.1",
     "react-native-modal-overlay": "1.3.1",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-pager-view": "^5.1.10",
     "react-native-push-notification": "7.3.1",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "1.13.2",
+    "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "2.17.1",
+    "react-native-screens": "3.3.0",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "12.1.1",
-    "react-native-tab-view": "^3.0.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "2.16.0",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "7.1.0",
     "react-redux": "7.2.4",
@@ -140,6 +140,6 @@
     "typescript": "^4.3.2"
   },
   "optionalDependencies": {
-    "@mermaid-js/mermaid-cli": "^8.9.0"
+    "@mermaid-js/mermaid-cli": "^8.10.1"
   }
 }
