--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -2,11 +2,12 @@
 
 buildscript {
     ext {
-        minSdkVersion = 16
+        minSdkVersion = 21
         buildToolsVersion = "29.0.2"
         compileSdkVersion = 29
         targetSdkVersion = 29
         kotlinVersion = '1.3.41'
+        firebaseMessagingVersion = "21.1.0"
     }
     repositories {
         google()
