--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -92,7 +92,9 @@
     "timers": "0.1.1",
     "toggle-switch-react-native": "3.0.0",
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
-    "xml2js": "0.4.23"
+    "xml2js": "0.4.23",
+    "jsbn": "^1.1.0",
+    "expr-eval": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
