--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -29,7 +29,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "1.8.0",
     "@react-native-community/slider": "3.0.3",
-    "@react-native-picker/picker": "1.16.1",
+    "@react-native-picker/picker": "1.16.3",
     "@react-navigation/drawer": "5.12.5",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
@@ -47,8 +47,8 @@
     "events": "3.3.0",
     "fast-json-stable-stringify": "2.1.0",
     "husky": "6.0.0",
-    "i18next": "20.3.1",
-    "immer": "9.0.2",
+    "i18next": "20.3.3",
+    "immer": "9.0.5",
     "lodash": "4.17.21",
     "moment": "2.29.1",
     "promise.any": "^2.0.2",
@@ -57,7 +57,7 @@
     "ramda": "0.27.1",
     "react": "16.13.1",
     "react-dom": "16.11.0",
-    "react-i18next": "11.10.0",
+    "react-i18next": "11.11.3",
     "react-native": "0.63.4",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "3.44.1",
@@ -69,13 +69,14 @@
     "react-native-keychain": "7.0.0",
     "react-native-localize": "2.1.1",
     "react-native-modal-overlay": "1.3.1",
+    "react-native-modpow": "^1.1.0",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-pager-view": "^5.2.1",
-    "react-native-push-notification": "7.3.1",
+    "react-native-push-notification": "7.4.0",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "3.3.0",
+    "react-native-screens": "3.4.0",
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "2.16.0",
