--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -35,18 +35,18 @@
     "@react-navigation/stack": "5.14.5",
     "@reduxjs/toolkit": "1.5.1",
     "apisauce": "2.1.1",
-    "appcenter": "3.1.2",
-    "appcenter-analytics": "3.1.2",
-    "appcenter-crashes": "3.1.2",
+    "appcenter": "4.2.0",
+    "appcenter-analytics": "4.2.0",
+    "appcenter-crashes": "4.2.0",
     "base64-js": "1.5.1",
     "buffer": "6.0.3",
     "crypto-js": "3.3.0",
-    "detox": "18.14.1",
+    "detox": "18.19.0",
     "ed2curve": "0.3.0",
     "emittery": "0.6.0",
     "events": "3.3.0",
     "fast-json-stable-stringify": "2.1.0",
-    "husky": "6.0.0",
+    "husky": "7.0.1",
     "i18next": "20.3.3",
     "immer": "9.0.5",
     "lodash": "4.17.21",
@@ -55,13 +55,12 @@
     "prop-types": "15.7.2",
     "qrcode": "1.4.4",
     "ramda": "0.27.1",
-    "react": "16.13.1",
-    "react-dom": "16.11.0",
+    "react": "17.0.1",
     "react-i18next": "11.11.3",
-    "react-native": "0.63.4",
+    "react-native": "0.64.2",
     "react-native-barcode-mask": "1.2.4",
-    "react-native-camera": "3.44.1",
-    "react-native-code-push": "7.0.0",
+    "react-native-camera": "4.0.0",
+    "react-native-code-push": "7.0.1",
     "react-native-dropdownalert": "4.3.0",
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-crop-picker": "0.36.2",
@@ -69,7 +68,7 @@
     "react-native-keychain": "7.0.0",
     "react-native-localize": "2.1.1",
     "react-native-modal-overlay": "1.3.1",
-    "react-native-modpow": "^1.1.0",
+    "react-native-modpow": "1.1.0",
     "react-native-navigation-bar-color": "2.0.1",
     "react-native-pager-view": "^5.2.1",
     "react-native-push-notification": "7.4.0",
@@ -95,7 +94,7 @@
     "xml2js": "0.4.23"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-syntax-export-default-from": "^7.12.13",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
@@ -103,7 +102,7 @@
     "@types/jest": "^26.0.23",
     "@types/ramda": "^0.27.40",
     "@types/react": "^17.0.2",
-    "@types/react-native": "^0.63.49",
+    "@types/react-native": "^0.64.12",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.1",
@@ -133,10 +132,10 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
-    "metro-react-native-babel-preset": "^0.65.1",
+    "metro-react-native-babel-preset": "^0.64.0",
     "mock-async-storage": "^2.2.0",
     "prettier": "^2.3.1",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "17.0.1",
     "resolve": "^1.20.0",
     "typescript": "^4.3.2"
   }
