--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -152,6 +152,8 @@ if (stagingPropertiesFile.exists()){
 }
 
 android {
+    ndkVersion rootProject.ext.ndkVersion
+
     compileSdkVersion rootProject.ext.compileSdkVersion
 
      compileOptions {
@@ -242,7 +244,7 @@ android {
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
-                        versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
+                        defaultConfig.versionCode * 1000 + versionCodes.get(abi)
             }
         }
     }
