--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -2,10 +2,11 @@
 
 buildscript {
     ext {
-        minSdkVersion = 16
-        buildToolsVersion = "29.0.2"
+        buildToolsVersion = "29.0.3"
+        minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
+        ndkVersion = "20.1.5948944"
         kotlinVersion = '1.3.41'
     }
     repositories {
@@ -15,7 +16,7 @@ buildscript {
         maven { url "https://www.jitpack.io" }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.4")
+        classpath("com.android.tools.build:gradle:4.1.0")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.gms:google-services:4.3.3"
         // NOTE: Do not place your application dependencies here; they belong
