--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -5,7 +5,7 @@ jobs:
 
   build_debug_apk:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     defaults:
       run:
@@ -50,7 +50,7 @@ jobs:
 
   build_staging_apk:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     defaults:
       run:
@@ -96,7 +96,7 @@ jobs:
 
   build_release_apk:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     defaults:
       run:
