--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         targetSdkVersion = 29
         kotlinVersion = '1.3.41'
         firebaseMessagingVersion = "21.1.0"
+        ndkVersion = "21.4.7075529"
     }
     repositories {
         google()
