--- a/BrightID/android/gradle.properties
+++ b/BrightID/android/gradle.properties
@@ -28,3 +28,4 @@ FLIPPER_VERSION=0.54.0
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx2560m
 AsyncStorage_db_size_in_MB=10
+android.ndkVersion = "21.4.7075529"
