--- a/BrightID/ios/BrightID/BrightID.entitlements
+++ b/BrightID/ios/BrightID/BrightID.entitlements
@@ -11,6 +11,8 @@
 	</array>
 	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
 	<true/>
+	<key>com.apple.security.device.camera</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)org.brightid.demo.SharedKeychain</string>
