--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -164,8 +164,8 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
-        versionCode 45
-        versionName "4.22.0"
+        versionCode 46
+        versionName "4.22.1"
         multiDexEnabled true
         testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -293,7 +293,16 @@ dependencies {
 
     androidTestImplementation('com.wix:detox:+')
 
-    implementation 'androidx.appcompat:appcompat:1.3.1' 
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+
+    // Work around https://github.com/BrightID/BrightID/issues/1089
+    // Also see https://github.com/facebook/react-native/issues/32735 - This should
+    // be removed when upgrading react-native version
+    implementation('com.facebook.soloader:soloader:0.10.3') {
+       version {
+           strictly '0.10.3'
+       }
+   }
 }
 
 // Run this once to be able to run the application with BUCK
