--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -1,16 +1,16 @@
 {
   "name": "BrightID",
-  "version": "4.22.0",
+  "version": "4.22.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android --appIdSuffix debug",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "start:detox": "RN_SRC_EXT=e2e.js,e2e.ts react-native start",
-    "build:detox:android": "detox build -c android",
+    "build:detox:android": "detox build -c android.emu.debug",
     "build:detox:ios": "detox build -c ios.sim.debug",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'  --assets-dest='./ios'",
-    "test:android": "detox test -c android",
+    "test:android": "detox test -c android.emu.debug",
     "test:ios": "detox test -c ios.sim.debug",
     "test": "jest",
     "lint": "eslint 'src' --quiet --fix",
