--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -24,30 +24,30 @@
     "fix-dependencies": "rnx-dep-check --write"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "3.12.0",
+    "@expo/react-native-action-sheet": "4.0.0",
     "@react-native-async-storage/async-storage": "1.17.10",
-    "@react-native-community/blur": "3.6.0",
+    "@react-native-community/blur": "4.2.0",
     "@react-native-community/checkbox": "0.5.12",
     "@react-native-community/clipboard": "1.5.1",
-    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.10.1",
-    "@react-native-community/slider": "3.0.3",
+    "@react-native-community/slider": "4.3.2",
     "@react-native-community/viewpager": "4.2.2",
-    "@react-native-picker/picker": "1.9.11",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "6.5.0",
     "@react-navigation/elements": "^1.3.6",
     "@react-navigation/native": "6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "@react-navigation/stack": "6.3.2",
-    "@reduxjs/toolkit": "1.5.0",
+    "@react-navigation/stack": "6.3.3",
+    "@reduxjs/toolkit": "1.8.6",
     "@types/crypto-js": "^4.1.0",
     "@types/jsbn": "^1.2.30",
     "@types/lodash": "^4.14.178",
     "@types/qrcode": "^1.4.2",
-    "apisauce": "2.0.1",
-    "appcenter": "4.4.3",
-    "appcenter-analytics": "4.4.3",
-    "appcenter-crashes": "4.4.3",
+    "apisauce": "2.1.6",
+    "appcenter": "4.4.5",
+    "appcenter-analytics": "4.4.5",
+    "appcenter-crashes": "4.4.5",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
     "compare-versions": "^4.1.3",
@@ -55,57 +55,57 @@
     "detox": "^19.12.6",
     "ed2curve": "0.3.0",
     "emittery": "0.6.0",
-    "events": "3.2.0",
+    "events": "3.3.0",
     "expr-eval": "^2.0.2",
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.8",
-    "i18next": "21.6.14",
-    "immer": "8.0.1",
+    "i18next": "22.0.3",
+    "immer": "9.0.16",
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
     "libphonenumber-js": "^1.9.49",
-    "lodash": "4.17.20",
-    "moment": "2.29.1",
+    "lodash": "4.17.21",
+    "moment": "2.29.4",
     "promise.any": "^2.0.2",
     "prop-types": "15.8.1",
-    "qrcode": "1.5.0",
-    "ramda": "0.27.1",
+    "qrcode": "1.5.1",
+    "ramda": "0.28.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-i18next": "11.16.2",
-    "react-native": "0.70.3",
+    "react-i18next": "12.0.0",
+    "react-native": "0.70.4",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "4.2.1",
-    "react-native-code-push": "7.0.4",
-    "react-native-contacts": "7.0.4",
+    "react-native-code-push": "7.0.5",
+    "react-native-contacts": "7.0.5",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
     "react-native-error-boundary": "^1.1.16",
     "react-native-http-bridge": "https://github.com/BrightID/react-native-http-bridge",
     "react-native-gesture-handler": "2.8.0",
-    "react-native-image-crop-picker": "0.38.0",
+    "react-native-image-crop-picker": "0.38.1",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
-    "react-native-keychain": "8.0.0",
-    "react-native-localize": "2.2.1",
+    "react-native-keychain": "8.1.1",
+    "react-native-localize": "2.2.4",
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "1.1.0",
     "react-native-network-info": "5.2.1",
     "react-native-phone-number-input": "2.1.0",
     "react-native-push-notification": "8.1.1",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.11.0",
+    "react-native-reanimated": "2.12.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "2.17.1",
+    "react-native-screens": "^3.18.2",
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
-    "react-native-vector-icons": "7.1.0",
-    "react-redux": "7.2.8",
+    "react-native-vector-icons": "9.2.0",
+    "react-redux": "8.0.4",
     "redux-mock-store": "1.5.4",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.1",
-    "reselect": "4.1.5",
+    "reselect": "4.1.6",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
@@ -115,17 +115,17 @@
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@babel/plugin-syntax-export-default-from": "^7.18.6",
-    "@babel/runtime": "^7.19.4",
+    "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-native": "^11.5.0",
-    "@rnx-kit/dep-check": "^1.13.2",
+    "@rnx-kit/dep-check": "^1.13.3",
     "@types/jest": "^27.4.1",
     "@types/ramda": "^0.27.38",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/redux-persist": "^4.3.1",
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -152,15 +152,15 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "i18next-parser": "3.0.0",
+    "i18next-parser": "6.6.0",
     "jest": "^26.6.3",
     "jetifier": "^2.0.0",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^13.0.3",
     "metro-react-native-babel-preset": "0.72.3",
     "mock-async-storage": "^2.2.0",
     "msw": "^0.49.2",
     "prettier": "^2.2.1",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "18.2.0",
     "resolve": "^1.20.0",
     "typescript": "^4.4.4"
   },
