--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BrightID",
-  "version": "4.22.6",
+  "version": "4.23.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android --appIdSuffix debug",
@@ -77,6 +77,7 @@
     "react-native-contacts": "7.0.4",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
+    "react-native-error-boundary": "^1.1.16",
     "react-native-gesture-handler": "1.10.3",
     "react-native-http-bridge": "https://github.com/BrightID/react-native-http-bridge",
     "react-native-image-crop-picker": "0.37.3",
