--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -102,6 +102,7 @@
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "7.1.0",
+    "react-native-webview": "^11.26.0",
     "react-redux": "7.2.8",
     "redux-mock-store": "1.5.4",
     "redux-persist": "6.0.0",
