--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -155,6 +155,7 @@
     "lint-staged": "^10.5.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "mock-async-storage": "^2.2.0",
+    "msw": "^0.49.2",
     "prettier": "^2.2.1",
     "react-test-renderer": "17.0.2",
     "resolve": "^1.20.0",
