--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -24,26 +24,22 @@
     "fix-dependencies": "rnx-align-deps --write"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "4.0.0",
-    "@react-native-async-storage/async-storage": "1.17.10",
+    "@expo/react-native-action-sheet": "4.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "https://github.com/BrightID/react-native-blur",
-    "@react-native-community/checkbox": "0.5.12",
+    "@react-native-community/checkbox": "0.5.14",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/push-notification-ios": "1.10.1",
-    "@react-native-community/slider": "4.2.4",
+    "@react-native-community/slider": "4.4.0",
     "@react-native-community/viewpager": "4.2.2",
-    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-native-picker/picker": "2.4.8",
-    "@react-navigation/drawer": "6.5.0",
-    "@react-navigation/elements": "^1.3.6",
-    "@react-navigation/native": "6.0.13",
-    "@react-navigation/native-stack": "^6.9.1",
-    "@react-navigation/stack": "6.3.3",
+    "@react-navigation/drawer": "6.5.7",
+    "@react-navigation/elements": "1.3.6",
+    "@react-navigation/native": "6.1.2",
+    "@react-navigation/native-stack": "6.9.1",
+    "@react-navigation/stack": "6.3.11",
     "@reduxjs/toolkit": "1.8.6",
-    "@types/crypto-js": "^4.1.0",
-    "@types/jsbn": "^1.2.30",
-    "@types/lodash": "^4.14.178",
-    "@types/qrcode": "^1.4.2",
     "apisauce": "2.1.6",
     "appcenter": "4.4.5",
     "appcenter-analytics": "4.4.5",
@@ -59,8 +55,8 @@
     "expr-eval": "^2.0.2",
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.8",
-    "i18next": "22.0.3",
-    "immer": "9.0.16",
+    "i18next": "22.4.9",
+    "immer": "9.0.18",
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
     "libphonenumber-js": "^1.9.49",
@@ -70,20 +66,20 @@
     "prop-types": "15.8.1",
     "qrcode": "1.5.1",
     "ramda": "0.28.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-i18next": "12.0.0",
-    "react-native": "0.70.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "12.1.4",
+    "react-native": "0.71.0",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "https://github.com/BrightID/react-native-camera",
     "react-native-code-push": "7.0.5",
     "react-native-contacts": "7.0.5",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
-    "react-native-error-boundary": "^1.1.16",
-    "react-native-gesture-handler": "2.8.0",
+    "react-native-error-boundary": "1.1.16",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-http-bridge": "https://github.com/BrightID/react-native-http-bridge",
-    "react-native-image-crop-picker": "0.38.1",
+    "react-native-image-crop-picker": "0.39.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "8.1.1",
     "react-native-localize": "2.2.4",
@@ -93,19 +89,19 @@
     "react-native-phone-number-input": "2.1.0",
     "react-native-push-notification": "8.1.1",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.12.0",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-reanimated": "2.14.2",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.18.2",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "13.7.0",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "9.2.0",
-    "react-redux": "8.0.4",
+    "react-redux": "8.0.5",
     "redux-mock-store": "1.5.4",
     "redux-persist": "6.0.0",
-    "redux-thunk": "2.4.1",
-    "reselect": "4.1.6",
+    "redux-thunk": "2.4.2",
+    "reselect": "4.1.7",
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
@@ -113,16 +109,23 @@
     "xml2js": "0.4.23"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-syntax-export-default-from": "^7.18.6",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/preset-env": "^7.14.0",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "@rnx-kit/align-deps": "^2.0.3",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-native": "^11.5.0",
-    "@types/jest": "^27.4.1",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/crypto-js": "^4.1.0",
+    "@types/jest": "^29.2.1",
+    "@types/jsbn": "^1.2.30",
+    "@types/lodash": "^4.14.178",
+    "@types/qrcode": "^1.4.2",
     "@types/ramda": "^0.27.38",
+    "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^18.0.0",
@@ -132,9 +135,9 @@
     "@typescript-eslint/parser": "^4.15.1",
     "axios": "^0.26.1",
     "babel-eslint": "^10.0.3",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.2.1",
     "babel-plugin-inline-import": "^3.0.0",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -152,20 +155,20 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "i18next-parser": "6.6.0",
-    "jest": "^26.6.3",
+    "i18next-parser": "7.6.0",
+    "jest": "^29.2.1",
     "jetifier": "^2.0.0",
     "lint-staged": "^13.0.3",
-    "metro-react-native-babel-preset": "0.72.3",
+    "metro-react-native-babel-preset": "0.73.5",
     "mock-async-storage": "^2.2.0",
     "msw": "^0.49.2",
-    "prettier": "^2.2.1",
+    "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "resolve": "^1.20.0",
-    "typescript": "^4.4.4"
+    "typescript": "4.8.4"
   },
   "optionalDependencies": {
-    "@mermaid-js/mermaid-cli": "^8.9.0"
+    "@mermaid-js/mermaid-cli": "^9.3.0"
   },
   "resolutions": {
     "react-devtools-core": "~4.25.0"
